Better os monitoring.